# ai-interview

./: BUSINESS_PLAN.md  DEPLOYMENT.md  README.md  README_BUSINESS.md  render.yaml  requirements-frozen.txt  start.sh
.github/: copilot-instructions.md
backend/: .env.example  .gitignore  DATABASE_SETUP.md  README.md  REQUIREMENTS_GUIDE.md  SECURITY_UPDATE.md  build.sh  db_cli.py  main.py  pyproject.toml  requirements-clean.txt  requirements-deploy.txt  requirements-dev.txt  requirements-minimal.txt  requirements-prod.txt  requirements.txt  setup.py
backend/app/: __init__.py
backend/app/api/: __init__.py  router.py
backend/app/api/endpoints/: __init__.py  auth.py  sessions.py  websocket.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  interview.py
backend/app/core/: __init__.py  auth_middleware.py  config.py  database_init.py  mongo.py  security_middleware.py  security_utils.py  websocket_manager.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  auth_service.py  file_service.py  openai_service.py  pdf_service.py  session_service.py
backend/exports/: .gitkeep
backend/scripts/: dev.sh  prod.sh  test.sh
backend/uploads/: .gitkeep
docs/: FEATURE.md  frontend-clean-code-guide.md  python-backend-clean-code-guide.md
frontend/: ANIMATIONS.md  build.sh  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: answers-editor.tsx  auth-modal.tsx  auth-provider.tsx  authenticated-area.tsx  bulk-answer-generator.tsx  connection-status.tsx  content-section.tsx  credit-display.tsx  enhanced-generation-controls.tsx  file-upload-zone.tsx  footer.tsx  generation-controls.tsx  header-navigation.tsx  inputs-pane.tsx  optimized-animation.tsx  outputs-pane.tsx  page-header.tsx  page-layout.tsx  pricing-plans.tsx  questions-list.tsx  saved-questions.tsx  session-sidebar.tsx  websocket-provider.tsx
frontend/hooks/: use-auth.ts  use-performance.ts  use-reduced-motion.ts  use-session-manager.ts  use-websocket-integration.ts  use-websocket.ts
frontend/lib/: answer-templates.ts  api-service.ts  auth-service.ts  auth.ts  pdf-exporter.tsx  session-manager.ts  stripe.ts  (+3 more)
(+48 files in other folders)
