[tool.poetry]
name = "ai-interview-prep-backend"
version = "1.0.0"
description = "Backend API for AI-powered interview preparation application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.117.1"
uvicorn = {extras = ["standard"], version = "^0.36.0"}
pydantic = "^2.11.9"
pydantic-settings = "^2.10.1"
websockets = "^12.0"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"
PyPDF2 = "^3.0.1"
python-docx = "^1.2.0"
reportlab = "^4.4.4"
openai = "^1.108.1"
python-dotenv = "^1.1.1"
motor = "^3.7.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.28.1"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.group.prod.dependencies]
gunicorn = "^23.0.0"

[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 10000"
dev = "uvicorn main:app --host 0.0.0.0 --port 10000 --reload"
test = "pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "motor.*",
    "passlib.*",
    "bcrypt.*",
    "jose.*",
    "PyPDF2.*",
    "docx.*",
    "reportlab.*",
    "openai.*",
]
ignore_missing_imports = true
